# hermes

./: .gitignore  AI规则_宪法.md  Cargo.toml  LICENSE  README.md  REQUIREMENTS.md  action.yml
.github/workflows/: ci.yml
docs/: P1-开发计划.md  P2-开发计划.md  P3-代码清洁计划.md  P4-wiremock集成测试计划.md  README-ZH.md
src/: lib.rs  main.rs
src/audit/: fixer.rs  mod.rs  parser.rs  rules.rs  scanner.rs  types.rs
src/chain/: hmac.rs  mod.rs  types.rs  verify.rs
src/fuzz/: engine.rs  mod.rs  payloads.rs  types.rs
src/policy/: engine.rs  mod.rs  parser.rs  presets.rs  types.rs
src/probe/: auth.rs  common.rs  deputy.rs  fixation.rs  mod.rs  passthrough.rs  redirect.rs  replay.rs  session.rs  ssrf.rs  tls.rs  tools.rs  traversal.rs  types.rs
src/report/: html.rs  json.rs  mod.rs  sarif.rs  terminal.rs
tests/: cli_tests.rs  integration_tests.rs  tls_tests.rs
tests/fixtures/configs/: mcp.json  package.json  secure-mcp.json
