[package]
name = "hermes"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "MCP Runtime Security Scanner & Compliance Auditor"
rust-version = "1.88.0"

[[bin]]
name = "hermes"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
rustls-native-certs = "0.8"
x509-parser = "0.16"
ring = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
color-eyre = "0.6"
indicatif = "0.17"
console = "0.15"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
