[package]
name = "hermes-mcp"
version = "0.3.1"
edition = "2021"
license = "Apache-2.0"
description = "MCP Runtime Security Scanner & Compliance Auditor — static config audit, runtime TLS/auth probe, and policy enforcement for MCP servers"
rust-version = "1.88.0"
repository = "https://github.com/faysal-X-N/hermes"
homepage = "https://github.com/faysal-X-N/hermes"
documentation = "https://docs.rs/hermes-mcp"
readme = "README.md"
keywords = ["mcp", "security", "scanner", "audit", "cli"]
categories = ["command-line-utilities", "development-tools::testing"]

[[bin]]
name = "hermes"
path = "src/main.rs"

[lib]
name = "hermes"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12"] }
tokio-rustls = "0.26"
rustls-native-certs = "0.8"
x509-parser = "0.16"
ring = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
color-eyre = "0.6"
console = "0.15"
serde_yaml_ng = "0.10"
glob = "0.3.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
wiremock = "0.6.5"
